Tests/New/Neg/Basic/BadLhs.p
main model Foo {
    start state Init {
        entry {
            (1, 3)[0] = 1;
        }
    }
}
